# voice-journal

./: .gitattributes  .gitignore  README.BUILD.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts  vj-accuracy-ce5f560.json  vj-benchmark-ce5f560.json  vj-benchmark-e216af7.json
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/assets/accuracy/: manifest.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/java/dev/zyriel/voicejournal/: MainActivity.kt
app/src/main/java/dev/zyriel/voicejournal/audio/: AtomicMaterialize.kt  AudioPlayer.kt  AudioRecorder.kt  OrphanSweep.kt  WavReader.kt  WavRepair.kt  WavWriter.kt
app/src/main/java/dev/zyriel/voicejournal/bench/: AccuracyManifest.kt  AccuracySuite.kt  Bench.kt  BenchmarkSuite.kt  WordErrorRate.kt
app/src/main/java/dev/zyriel/voicejournal/data/: JournalArchive.kt  JournalDb.kt  JournalEntry.kt  JournalImporter.kt
app/src/main/java/dev/zyriel/voicejournal/pipeline/: RecordingController.kt  RecordingService.kt
app/src/main/java/dev/zyriel/voicejournal/search/: OnnxEmbeddingEngine.kt  Search.kt  WordPieceTokenizer.kt
app/src/main/java/dev/zyriel/voicejournal/ui/: AboutDialog.kt  JournalViewModel.kt
app/src/main/java/dev/zyriel/voicejournal/whisper/: Transcriber.kt  WhisperBridge.kt
app/src/test/java/dev/zyriel/voicejournal/audio/: AtomicMaterializeTest.kt  (+4 more)
docs/: STATUS.md  index.html
gradle/wrapper/: gradle-wrapper.properties
scripts/: fetch-models.ps1  fetch-models.sh
(+11 files in other folders)
